--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "RT-refactor",
+  "name": "fortykpkg",
   "version": "1.0.0",
   "description": "",
-  "private": true,
+   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^4.35.3",
-    "webpack-cli": "^3.3.5"
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2"
   },
-  "dependencies": {
-    "lodash": "^4.17.14"
-  }
+  "dependencies": {}
 }
